# ai-genai-usecases-document-summarization

./: .env.example  .gitignore  Dockerfile  Dockerfile.streamlit  README.md  docker-compose.yml  pyproject.toml
config/: logging.yaml  settings.yaml
scripts/: ingest_documents.py
src/: __init__.py  main.py
src/agent/: __init__.py  graph.py  llm_client.py  prompt_templates.py
src/agent/nodes/: __init__.py  lead_extraction_node.py  lead_scoring_node.py  retrieval_node.py  router_node.py  summarization_node.py
src/agent/tools/: __init__.py  lead_extractor_tool.py  rag_tool.py  summarizer_tool.py
src/api/: __init__.py  middleware.py
src/api/models/: __init__.py  schemas.py
src/api/routes/: __init__.py  chat.py  health.py  (+2 more)
src/config/: __init__.py  settings.py
src/ingestion/: __init__.py  document_loader.py  excel_loader.py  pipeline.py  text_splitter.py
src/models/: __init__.py  agent_state.py  lead_schemas.py
src/rag/: __init__.py  embeddings.py  retriever.py  vector_store.py
src/services/: __init__.py  ingestion_service.py  lead_service.py
src/utils/: __init__.py  exceptions.py  input_sanitizer.py  logger.py
tests/: __init__.py  conftest.py
tests/test_agent/: __init__.py  test_lead_scoring_node.py  test_router_node.py
tests/test_api/: __init__.py  test_health_routes.py
tests/test_ingestion/: __init__.py  test_document_loader.py  test_excel_loader.py  test_pipeline.py  test_text_splitter.py
tests/test_rag/: __init__.py  test_retriever.py
tests/test_utils/: __init__.py  test_exceptions.py  test_input_sanitizer.py
ui/: streamlit_app.py
